remove Synthesized class, fix icon alignment

--- a/src/Dropdown/DropdownItem.module.scss
+++ b/src/Dropdown/DropdownItem.module.scss
@@ -1,45 +1,20 @@
 @import '../../scss/theme';
 
-.Synthesized {
-  .DropdownItem {
-    @include synth-font-type-30;
-    color: $ux-gray-900;
-  
-    i, svg {
-      &.icon-left {
-        margin-right: $ux-spacing-20;
-      }
-    }
-  
-    &:hover {
-      background-color: $synth-hover-state;
-      text-decoration: none;
-    }
-  
-    &:focus {
-      background-color: $synth-selected-state-green;
-      color: $ux-gray-900;
-    }
-  }
-}
-
 .DropdownItem {
   @include synth-font-type-30;
   color: $ux-gray-900;
 
-  i, svg {
-    &.icon-left {
-      margin-right: $ux-spacing-20;
-    }
-  }
-
   &:hover {
-    background-color: $ux-blue-100;
+    background-color: $synth-hover-state;
     text-decoration: none;
   }
 
   &:focus {
-    background-color: $ux-blue-200;
+    background-color: $synth-selected-state-green;
     color: $ux-gray-900;
   }
+}
+
+.DropdownItemIcon {
+  margin-right: $ux-spacing-20;
 }
